=== master

* Support :weeks as a interval unit in the date_arithmetic extension (jeremyevans) (#1759)

* Raise an exception if an interval hash with an unsupported key is passed in the date_arithmetic extension (jeremyevans) (#1759)

* Support dropping non-composite unique constraints on SQLite (jeremyevans) (#1755)

=== 5.43.0 (2021-04-01)

* Add column_encryption plugin, for encrypting column values (jeremyevans)

=== 5.42.0 (2021-03-01)

* Make the ado timestamp conversion proc a normal conversion proc that can be overridden similar to other conversion procs (jeremyevans)

* Add :reject_nil option to the nested_attributes method, to ignore calls where nil is passed as the associated object data (jeremyevans)

* Add async_thread_pool plugin for easier async usage with model classes and support for async destroy, with_pk, and with_pk! methods (jeremyevans)

* Add async_thread_pool Database extension for executing queries asynchronously using a thread pool (jeremyevans)

* Fix possible thread safety issue in Database#extension that could allow Module#extended to be called twice with the same Database instance (jeremyevans)

* Support cases where validations make modifications beyond setting errors in Model#freeze (jeremyevans)

* Add Model#to_json_data to the json_serializer plugin, returning a JSON data structure (jeremyevans)

=== 5.41.0 (2021-02-01)

* Have explicit :text option for a String column take priority over :size option on PostgreSQL (jeremyevans) (#1750)

* Support a :skip_invalid option in auto_validations plugin for not adding errors to a column that already has an error (jeremyevans)

* Support a :skip_invalid option in validation_helpers for not adding an error to a column that already has an error (jeremyevans)

* Support :adder, :remover, and :clearer association options that use keyword arguments in Ruby 2.7+ (jeremyevans)
