@@ -11,6 +11,7 @@
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/AssociationMultiAddRemove.html">association_multi_add_remove</a>: Allows adding/removing multiple associated objects in a single method call.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/AssociationPks.html">association_pks</a>: Adds the association_pks and association_pks= to *_to_many associations.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/AssociationProxies.html">association_proxies</a>: Changes the *_to_many association method to return a proxy instead of an array of objects.</li>
+<li><a href="rdoc-plugins/classes/Sequel/Plugins/ConcurrentEagerLoading.html">concurrent_eager_loading</a>: Allows you to concurrently eagerly load multiple associations using the async_thread_pool Database extension.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/DatasetAssociations.html">dataset_associations</a>: Adds association methods to datasets that return datasets of associated objects.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/DelayAddAssociation.html">delay_add_association</a>: Delay add_<i>association</i> calls on new objects until after after the object is saved.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/EagerEach.html">eager_each</a>: Makes each on an eagerly loaded dataset do eager loading.</li>
