@@ -1,5 +1,7 @@
 === master
 
+* Add concurrent_eager_loading plugin, for eager loading multiple associations concurrently using separate threads (jeremyevans)
+
 * Support :weeks as a interval unit in the date_arithmetic extension (jeremyevans) (#1759)
 
 * Raise an exception if an interval hash with an unsupported key is passed in the date_arithmetic extension (jeremyevans) (#1759)
